--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar bg-body-tertiary">
+<nav class="navbar toolbar_color">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img src="../../assets/img/logo.png" alt="logo" width="30" height="24">
